cmake_minimum_required(VERSION 3.29)
project(_Abanades_Alejandro_ExamenCPP)

set(CMAKE_CXX_STANDARD 14)

add_executable(_Abanades_Alejandro_ExamenCPP
        main.cpp
        projecto1/projecto1.cpp
        projecto1/projecto1.h
        projecto2/projecto2.h
        projecto2/projecto2.cpp
        projecto3/projecto3.h
        projecto3/projecto3.cpp
)
